force-app/main/default/objects/Enquiry__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>ChatBot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>