force-app/main/default/objects/Enquiry__c/fields/Enquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Status__c</fullName>
    <label>Enquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Called</fullName>
            </value>
            <value>
                <fullName>Visited</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
                <isActive>false</isActive>
                <label>Converted</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>