force-app/main/default/objects/Enquiry__c/fields/First_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Formula__c</fullName>
    <formula>If( CONTAINS(Name, &quot; &quot;), LEFT( Name ,FIND(&quot; &quot;, Name )), Name )</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>