force-app/main/default/objects/Enquiry__c/fields/Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Formula__c</fullName>
    <formula>If( CONTAINS(Name, &quot; &quot;), MID( Name , FIND(&quot; &quot;, Name ), LEN(Name )), null)</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>