force-app/main/default/objects/Enquiry__c/fields/Second_Party_Source__c.field-meta.xml
<CustomField>
    <fullName>Second_Party_Source__c</fullName>
    <label>Second Party Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Snapchat</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>