force-app/main/default/objects/Enquiry__c/fields/Second_Party_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Party_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Party Source Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries (Second Party Source Name)</relationshipLabel>
    <relationshipName>Enquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>