force-app/main/default/objects/Enquiry__c/fields/Secondary_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Sukh Sampatti</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries (Secondary Assign To)</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>