force-app/main/default/objects/Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Assigned_To__c</columns>
    <columns>Secondary_Assign_To__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>