force-app/main/default/objects/Enquiry__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Primary_Assigned_To__c</columns>
    <columns>Secondary_Assign_To__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>